# Server_on_c

./: .gitignore  CMakeLists.txt  README.md  client.c  conanfile.txt  handle_app.c  handle_app.h  http_pars.c  http_pars.h  makefile  processing_req.c  processing_req.h  register_views.c  register_views.h  server.c  server.h  tests.c  views.c  views.h
include/: collections.h  database.h  handle_app.h  http_pars.h  processing_req.h  register_views.h  server.h  views.h
src/: database.c  handle_app.c  http_pars.c  processing_req.c  register_views.c  server.c  views.c
tests/: client.c  tests.c
